--- a/style/style.css
+++ b/style/style.css
@@ -92,6 +92,29 @@ body {
     display: none;
 }
 
+.cart-item {
+    width: 100%;
+    display: flex;
+    height: 80px;
+    margin-bottom: 15px;
+}
+
+.cart-item .img {
+    width: 30%;
+}
+
+.item-details {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 10px 20px;
+}
+
+.item-details .name {
+    font-size: 1rem;
+}
 /* PRODUCTS */
 .products {
     padding: 2rem 5rem;
