--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,24 @@ body {
 .dropdown-btn {
     bottom: -10px;
     right: 0.7rem;
+    min-width: 165px;
+    width: auto;
+    height: 50px;
+    letter-spacing: 0.5px;
+    line-height: 50px;
+    padding: 0 35px 0 35px;
+    font-size: 15px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    border: none;
+}
+
+.dropdown-btn:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    transition: all 0.5s ease-in-out;
 }
 
 .closed {
@@ -115,6 +133,7 @@ body {
 .item-details .name {
     font-size: 1rem;
 }
+
 /* PRODUCTS */
 .products {
     padding: 2rem 5rem;
@@ -152,7 +171,6 @@ body {
     position: absolute;
     top: 255px;
     display: none;
-    /* btnbtn */
     min-width: 165px;
     width: auto;
     height: 50px;
@@ -211,3 +229,43 @@ body {
     width: 10%
 }
 
+
+/* MODAL */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 5;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 2rem;
+    border: 1px solid #888;
+    width: 80%; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: black;
+}
+.modal-btn {
+    color: white;
+    padding: 0.5rem;
+    background-color: black;
+    border: none;
+}
+  
+.modal-btn:hover,
+.modal-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
+}
